--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
 				</div>
 				<a href="#callback__modal" class="btn btn-accent open_modal">Задать вопрос</a>
 			</div>
-			<div class="bg-violet h3">БУДЕМ РАДЫ ПРАКТИКОВАТЬ С ВАМИ!</div>
+			<div class="h3">БУДЕМ РАДЫ ПРАКТИКОВАТЬ С ВАМИ!</div>
 		</div>
 	</div>
 
