--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 
 	<header>
 		<div class="container">
-			<a href="mailto:info@vratamir.com">info@vratamir.com</a>
-			<a href="index.html" class="logo"><img src="img/logo.svg" alt=""></a>
-			<a href="tel:+74997192420">+7 (499) 719-24-20</a>
+			<a href="mailto:info@vratamir.com" class="link-mail">info@vratamir.com</a>
+			<a href="index.html" class="logo"><img src="img/logo.svg" alt="" class="d-pc">
+			<img src="img/logo-mobile.svg" alt="" class="d-mobile">
+			</a>
+			<a href="tel:+74997192420" class="link-phone">+7 (499) 719-24-20</a>
 		</div>
 	</header>
 
@@ -186,7 +188,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="for-whom-box">
+				<div class="for-whom-box w-25">
 					<div class="for-whom-box__number">07</div>
 					<div class="for-whom-box__body">
 						<h3>Для пожилых людей</h3>
